output/unpackaged/unpackaged/objects/Deal_Protection_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Days__c</fullName>
        <label>Days</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Deal_Protection_Grant__c</referenceTo>
        <relationshipLabel>Extensions</relationshipLabel>
        <relationshipName>Extensions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <label>Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Deal Protection Extension</label>
    <nameField>
        <displayFormat>DPE-{000000}</displayFormat>
        <label>Extension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Protection Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>